--- a/TotaraPhotographyAssociation/TotaraPhotographyAssociation.csproj
+++ b/TotaraPhotographyAssociation/TotaraPhotographyAssociation.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="HttpHandlers\PDFHandler.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AspNetUser.cs">
       <DependentUpon>TotaraPhotoModel.tt</DependentUpon>
@@ -213,6 +214,12 @@
       <DependentUpon>TotaraPhotoModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Product.cs">
+      <DependentUpon>TotaraPhotoModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Resource.cs">
+      <DependentUpon>TotaraPhotoModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\SysParam.cs">
       <DependentUpon>TotaraPhotoModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TotaraPhotoModel.Context.cs">
@@ -231,6 +238,7 @@
       <DependentUpon>TotaraPhotoModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RouteHandlers\PDFRouteHandler.cs" />
     <Compile Include="Services\PayPalConfiguration.cs" />
     <Compile Include="Services\PayPalPaymentService.cs" />
     <Compile Include="Startup.cs" />
@@ -334,6 +342,8 @@
     <Content Include="Views\Cart\CheckOut.cshtml" />
     <Content Include="Views\Order\Create.cshtml" />
     <Content Include="Views\Order\PaymentSuccessful.cshtml" />
+    <Content Include="Views\Home\EditAbout.cshtml" />
+    <Content Include="ResFiles\Clendons_NZPhotography.pdf" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
@@ -341,6 +351,9 @@
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>favicon.ico</ApplicationIcon>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
