--- a/TotaraPhotographyAssociation.Tests/packages.config
+++ b/TotaraPhotographyAssociation.Tests/packages.config
@@ -5,5 +5,6 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Selenium.Support" version="3.0.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.0.0" targetFramework="net452" />
 </packages>
